--- a/frappe-templates/supervisord.tmpl
+++ b/frappe-templates/supervisord.tmpl
@@ -3,7 +3,7 @@
 ; killasgroup=true --> send kill signal to child processes too
 
 [program:frappe-bench-frappe-web]
-command=/home/frappe/frappe-bench/env/bin/gunicorn -b 127.0.0.1:8080 -w 4 -t 120 frappe.app:application --preload
+command=/home/frappe/frappe-bench/env/bin/gunicorn -b 127.0.0.1:{{ default .Env.WEBSERVER_PORT "8000" }} -w 4 -t 120 frappe.app:application --preload
 priority=4
 autostart=true
 autorestart=true
@@ -79,7 +79,7 @@ directory=/home/frappe/frappe-bench
 
 [group:frappe-bench-web]
 programs=frappe-bench-frappe-web,frappe-bench-node-socketio
-
+8080
 [supervisord]
 pidfile = /tmp/supervisord.pid
 user = frappe
