--- a/frappe-templates/nginx.tmpl
+++ b/frappe-templates/nginx.tmpl
@@ -3,7 +3,7 @@ upstream frappe-bench-frappe {
 }
 
 upstream frappe-bench-socketio-server {
-	server 127.0.0.1:9000 fail_timeout=0;
+	server 127.0.0.1:{{ default .Env.SOCKETIO_PORT "9000" }} fail_timeout=0;
 }
 
 server {
@@ -69,8 +69,6 @@ server {
 	client_body_buffer_size 16K;
 	client_header_buffer_size 1k;
 
-	# enable gzip compresion
-	# based on https://mattstauffer.co/blog/enabling-gzip-on-nginx-servers-including-laravel-forge
 	gzip on;
 	gzip_http_version 1.1;
 	gzip_comp_level 5;
@@ -95,6 +93,5 @@ server {
 		text/plain
 		text/x-component
 		;
-	# text/html is always compressed by HttpGzipModule
 }
 
