--- a/frappe-templates/supervisord.tmpl
+++ b/frappe-templates/supervisord.tmpl
@@ -32,7 +32,7 @@ stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
 stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
 user=frappe
 stopwaitsecs=156
-directory=/home/
+directory=/home/frappe/frappe-bench
 killasgroup=true
 numprocs=1
 process_name=%(program_name)s-%(process_num)d
