--- a/frappe-templates/supervisord.tmpl
+++ b/frappe-templates/supervisord.tmpl
@@ -16,14 +16,14 @@ username=frappe
 autorestart=true
 
 [program:frappe-bench-frappe-web]
-command=/home/frappe/frappe-bench/env/bin/gunicorn -b 127.0.0.1:{{ default .Env.WEBSERVER_PORT "8000" }} -w 4 -t 120 frappe.app:application --preload
+command={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/env/bin/gunicorn -b 127.0.0.1:{{ default .Env.WEBSERVER_PORT "8000" }} -w 4 -t 120 frappe.app:application --preload
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/web.log
-stderr_logfile=/home/frappe/frappe-bench/logs/web.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/web.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/web.error.log
 user=frappe
-directory=/home/frappe/frappe-bench/sites
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/sites
 
 
 [program:frappe-bench-frappe-schedule]
@@ -31,21 +31,21 @@ command=/usr/local/bin/bench schedule
 priority=3
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/schedule.log
-stderr_logfile=/home/frappe/frappe-bench/logs/schedule.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/schedule.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/schedule.error.log
 user=frappe
-directory=/home/frappe/frappe-bench
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 
 [program:frappe-bench-frappe-default-worker]
 command=/usr/local/bin/bench worker --queue default
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.error.log
 user=frappe
 stopwaitsecs=156
-directory=/home/frappe/frappe-bench
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 killasgroup=true
 numprocs=1
 process_name=%(program_name)s-%(process_num)d
@@ -55,11 +55,11 @@ command=/usr/local/bin/bench worker --queue short
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.error.log
 user=frappe
 stopwaitsecs=360
-directory=/home/frappe/frappe-bench
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 killasgroup=true
 numprocs=1
 process_name=%(program_name)s-%(process_num)d
@@ -69,29 +69,40 @@ command=/usr/local/bin/bench worker --queue long
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
-stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/worker.error.log
 user=frappe
 stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 killasgroup=true
 numprocs=1
 process_name=%(program_name)s-%(process_num)d
 
 
 [program:frappe-bench-node-socketio]
-command=/usr/bin/node /home/frappe/frappe-bench/apps/frappe/socketio.js
+command=/usr/bin/node {{ default .Env.BENCH "/home/frappe/frappe-bench" }}/apps/frappe/socketio.js
 priority=4
 autostart=true
 autorestart=true
-stdout_logfile=/home/frappe/frappe-bench/logs/node-socketio.log
-stderr_logfile=/home/frappe/frappe-bench/logs/node-socketio.error.log
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/node-socketio.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/node-socketio.error.log
 user=frappe
-directory=/home/frappe/frappe-bench
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
+
+
+[program:frappe-bench-watch]
+command=/usr/local/bin/bench watch
+priority=4
+autostart=true
+autorestart=true
+stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/watch.log
+stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/watch.error.log
+user=frappe
+directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 
 
 [group:frappe-bench-web]
-programs=frappe-bench-frappe-web,frappe-bench-node-socketio,frappe-bench-nginx
+programs=frappe-bench-frappe-web,frappe-bench-node-socketio,frappe-bench-nginx{{ if (contains .ENV.MODE "dev" ) ",frappe-bench-watch" }}
 
 
 [group:frappe-bench-workers]
