--- a/frappe-templates/supervisord.tmpl
+++ b/frappe-templates/supervisord.tmpl
@@ -93,7 +93,7 @@ directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 [program:frappe-bench-watch]
 command=/usr/local/bin/bench watch
 priority=4
-autostart=true
+autostart={{ default .Env.DEV_MODE "false" }}
 autorestart=true
 stdout_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/watch.log
 stderr_logfile={{ default .Env.BENCH "/home/frappe/frappe-bench" }}/logs/watch.error.log
@@ -102,7 +102,7 @@ directory={{ default .Env.BENCH "/home/frappe/frappe-bench" }}
 
 
 [group:frappe-bench-web]
-programs=frappe-bench-frappe-web,frappe-bench-node-socketio,frappe-bench-nginx{{ if ( contains .ENV.MODE "dev" ) "\,frappe-bench-watch" }}
+programs=frappe-bench-frappe-web,frappe-bench-node-socketio,frappe-bench-nginx,frappe-bench-watch
 
 
 [group:frappe-bench-workers]
